// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Modal /> > Snapshots > should match snapshot 1`] = `
<div>
  <div
    aria-hidden="false"
    class="Modal_modalWrapper__1txblt60 Modal_modalWrapper_active_true__1txblt61 Modal_modalWrapper_minimized_false__1txblt63 neodrag"
    role="dialog"
    style="transform: translate3d(0px, 0px, 0); touch-action: none;"
  >
    <div
      class="Frame_marginBottom-mobile__iuzg8973 TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683 draggable"
      style="--marginBottom-mobile__iuzg8970: var(--r95-space-2);"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        file.bat
      </div>
    </div>
    <ul
      class="Modal_menuWrapper__1txblt66"
    >
      <li
        class="Modal_menuItem__1txblt67"
      >
        File
      </li>
      <li
        class="Modal_menuItem__1txblt67"
      >
        Edit
      </li>
    </ul>
    <div
      class="Modal_content__1txblt65"
    >
      Hello
    </div>
    <div
      class="Frame_justifyContent-mobile__iuzg8949 Modal_buttonWrapper__1txblt64"
      style="--justifyContent-mobile__iuzg8946: flex-end;"
    >
      <button
        class="Button_button__1bzq74l0"
        value="Ok"
      >
        Ok
      </button>
      <button
        class="Button_button__1bzq74l0"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`<Modal /> > Snapshots > should match snapshot with buttonsAligment prop equals center 1`] = `
<div>
  <div
    aria-hidden="false"
    class="Modal_modalWrapper__1txblt60 Modal_modalWrapper_active_true__1txblt61 Modal_modalWrapper_minimized_false__1txblt63 neodrag"
    role="dialog"
    style="transform: translate3d(0px, 0px, 0); touch-action: none;"
  >
    <div
      class="Frame_marginBottom-mobile__iuzg8973 TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683 draggable"
      style="--marginBottom-mobile__iuzg8970: var(--r95-space-2);"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        file.bat
      </div>
    </div>
    <div
      class="Modal_content__1txblt65"
    >
      Hello
    </div>
    <div
      class="Frame_justifyContent-mobile__iuzg8949 Modal_buttonWrapper__1txblt64"
      style="--justifyContent-mobile__iuzg8946: center;"
    >
      <button
        class="Button_button__1bzq74l0"
        value="Ok"
      >
        Ok
      </button>
      <button
        class="Button_button__1bzq74l0"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`<Modal /> > Snapshots > should match snapshot with buttonsAligment prop equals flex-start 1`] = `
<div>
  <div
    aria-hidden="false"
    class="Modal_modalWrapper__1txblt60 Modal_modalWrapper_active_true__1txblt61 Modal_modalWrapper_minimized_false__1txblt63 neodrag"
    role="dialog"
    style="transform: translate3d(0px, 0px, 0); touch-action: none;"
  >
    <div
      class="Frame_marginBottom-mobile__iuzg8973 TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683 draggable"
      style="--marginBottom-mobile__iuzg8970: var(--r95-space-2);"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        file.bat
      </div>
    </div>
    <div
      class="Modal_content__1txblt65"
    >
      Hello
    </div>
    <div
      class="Frame_justifyContent-mobile__iuzg8949 Modal_buttonWrapper__1txblt64"
      style="--justifyContent-mobile__iuzg8946: flex-start;"
    >
      <button
        class="Button_button__1bzq74l0"
        value="Ok"
      >
        Ok
      </button>
      <button
        class="Button_button__1bzq74l0"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`<Modal /> > Snapshots > should match snapshot with titleBarOptions 1`] = `
<div>
  <div
    aria-hidden="false"
    class="Modal_modalWrapper__1txblt60 Modal_modalWrapper_active_true__1txblt61 Modal_modalWrapper_minimized_false__1txblt63 neodrag"
    role="dialog"
    style="transform: translate3d(0px, 0px, 0); touch-action: none;"
  >
    <div
      class="Frame_marginBottom-mobile__iuzg8973 TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683 draggable"
      style="--marginBottom-mobile__iuzg8970: var(--r95-space-2);"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        file.bat
      </div>
      <div
        class="TitleBar_optionsBox__1kpzw680"
      >
        <button
          class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
        >
          <img
            alt="help"
            class="TitleBar_optionImage__1kpzw686"
            src="test-file-stub"
          />
        </button>
        <button
          class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
        >
          <img
            alt="maximize"
            class="TitleBar_optionImage__1kpzw686"
            src="test-file-stub"
          />
        </button>
        <button
          class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
        >
          <img
            alt="minimize"
            class="TitleBar_optionImage__1kpzw686"
            src="test-file-stub"
          />
        </button>
        <button
          class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
        >
          <img
            alt="restore"
            class="TitleBar_optionImage__1kpzw686"
            src="test-file-stub"
          />
        </button>
        <button
          class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
        >
          <img
            alt="close"
            class="TitleBar_optionImage__1kpzw686"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
    <div
      class="Modal_content__1txblt65"
    >
      Hello
    </div>
  </div>
</div>
`;
